2003-06-10  Eric B. Weddington  <eric@ecentral.com>

	* include/avr/sfr_defs.h: Deprecate inb,outb,inw,outw,cbi,sbi macros.
	Remove usage of above macros.
	* include/avr/ina90.h: Remove usage of inb / outb macros.
	* include/avr/interrupt.h: ditto.
	* include/avr/timer.h: ditto.
	* NEWS: Note about deprecation of macros.

2003-06-06  Eric B. Weddington  <eric@ecentral.com>

	* include/avr/boot.h: Add file. Provides new bootloader support API.
	* NEWS: Add note about new bootloader support API.

2003-06-05  Eric B. Weddington  <eric@ecentral.com>

	* include/avr/pgmspace.h: Add __volatile__ to asm macros to fix optimizer
	blunders; use inttypes.h; formatting.

2003-06-03  Theodore A. Roth  <troth@openavr.org>

	* include/avr/signal.h: Remove carriage returns.

2003-05-19  Eric B. Weddington  <eric@ecentral.com>

	* NEWS: Add note about new pgmspace.h API.

2003-05-19  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* NEWS: Update gcc and binutils version requirements.
	Add note about direct sfr access being preferred over in/out macros.

2003-05-14  Eric B. Weddington <eric@ecentral.com>

	* include/avr/pgmspace.h: New API.

2003-05-14  Eric B. Weddington <eric@ecentral.com>

	* include/avr/iotn26.h: Update interrupt vector names to match the
	datasheet. [Contributed by Artur Lipowski <LAL@pro.onet.pl>]

2003-05-12  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

2003-05-09  Eric B. Weddington  <eric@ecentral.com>

	* crt1/gcrt1.S: Change .data initialization under BIG_CODE to properly 
	use elpm for the ATmega103. 
	[Contributed by Geoffrey Wossum <geoffrey@pager.net>]

2003-05-08  Eric B. Weddington  <eric@ecentral.com>

	* doc/TODO: Update, add items.

2003-05-08  Eric B. Weddington  <eric@ecentral.com>

	* include/avr/signal.h: Add EMPTY_INTERRUPT macro.
	[Contributed by Artur Lipowski <LAL@pro.onet.pl>]

2003-05-05  Eric B. Weddington  <eric@ecentral.com>
